# xdata

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: _deploy-infrastructure.yml  _deploy-orchestration.yml  _deploy-runner.yml  aws-oidc-test.yml  deploy-infrastructure.yml  deploy-orchestration.yml  deploy.yml
dashboards/: pyproject.toml  top_coins.py
docs/: data_stack.md  mental_model.md  monorepo_structure.md  opentofu_project_guide.md  product_plan.md  rds_learnings.md  secret_management.md
docs/runbooks/: bootstrap_db.md
infra/: .tflint.hcl  trivy.yaml
infra/config/: dev.s3.tfbackend  dev.tfvars  prod.s3.tfbackend  prod.tfvars
infra/docker/: Dockerfile
infra/live/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
infra/modules/app/: catalog.tf  dagster.yaml.tftpl  iam.tf  lake.tf  locals.tf  networking.tf  orchestrator.tf  outputs.tf  registry.tf  secrets.tf  variables.tf
infra/modules/app/tests/: basic.tftest.hcl
infra/modules/dagster/: dagster.yaml.tftpl  iam.tf
infra/modules/ducklake/: networking.tf  outputs.tf
infra/modules/networking/: variables.tf
infra/modules/scheduled-runner/: alarms.tf  iam.tf  orchestrator.tf  registry.tf  variables.tf
infra/opentofu/config/: dev.tfvars
infra/opentofu/live/: main.tf  outputs.tf  providers.tf  variables.tf
infra/opentofu/modules/dagster/: iam.tf  orchestrator.tf  outputs.tf  registry.tf  security_groups.tf  variables.tf
infra/opentofu/modules/ducklake/: catalog.tf  variables.tf
infra/opentofu/modules/lake/: outputs.tf  s3.tf  variables.tf
infra/opentofu/modules/metadata/: outputs.tf  rds.tf  security_groups.tf  variables.tf
infra/opentofu/modules/networking/: outputs.tf  vpc.tf
infra/opentofu/modules/runner/: ecs.tf  iam.tf  outputs.tf  scheduler.tf  security_groups.tf  variables.tf
infra/opentofu/modules/scheduled-runner/: iam.tf  orchestrator.tf  variables.tf
ingestion/: pyproject.toml
ingestion/src/xdata_ingestion/: attach.py  dataset.py  ducklake.py  pipeline.py
ingestion/src/xdata_ingestion/sources/: coingecko.py
mcp/: pyproject.toml
mcp/xdata_mcp/: __main__.py  server.py
mcp/xdata_mcp/tools/: marts.py
migrations/: 001_enable_rds_iam_for_admin.sql
orchestration/: Dockerfile  dagster_cloud.yaml  pyproject.toml
orchestration/src/xdata_orchestration/: defs.py
scripts/: bootstrap_state.sh  load_env.sh
shared/: pyproject.toml
shared/xdata_shared/: ducklake.py  serialization.py
transform/: .gitignore  config.py  pyproject.toml
transform/models/marts/: top_coins.sql
transform/models/staging/: stg_coins_markets.sql
