[project]
name = "xdata-ingestion"
version = "0.0.0"
description = "dlt pipelines for the xdata DuckLake."
requires-python = ">=3.13"
dependencies = [
    "dlt[ducklake]>=1.26",
    "boto3>=1.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xdata_ingestion"]
