[project]
name = "xdata-ingestion"
version = "0.0.0"
description = "dlt pipelines for the xdata DuckLake."
requires-python = ">=3.14"
dependencies = [
    "dlt[ducklake,s3]>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xdata_ingestion"]
