[project]
name = "xdata-mcp"
version = "0.0.0"
description = "MCP server exposing DuckLake mart query tools over stdio."
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0",
    "duckdb>=1.1",
    "xdata-shared",
]

[tool.uv]
package = false

[tool.uv.sources]
xdata-shared = { workspace = true }
