[project]
name = "xdata-orchestration"
version = "0.0.0"
description = "Dagster code location for the xdata pipelines."
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.13",
    "dagster-cloud>=1.13",
    "dagster-embedded-elt>=0.29",
    "xdata-ingestion",
]

[tool.uv.sources]
xdata-ingestion = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xdata_orchestration"]
