[project]
name = "xdata-shared"
version = "0.0.0"
description = "Shared helpers for the xdata stack (DuckLake attach)."
requires-python = ">=3.14"
dependencies = ["duckdb>=1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xdata_shared"]
